Fix use npm stuff

--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,9 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="../lib/d3.min.js"></script>
-        <script src="../lib/topojson.min.js"></script>
-        <script src="rbush.js"></script>
+        <script src="../node_modules/d3/d3.min.js"></script>
+        <script src="../node_modules/topojson/build/topojson.min.js"></script>
+        <script src="../node_modules/rbush/rbush.js"></script>
         <script src="../spam.js"></script>
         <script type='text/javascript'>
         /*
