Elecciones works as well

--- a/test/elecciones.html
+++ b/test/elecciones.html
@@ -76,12 +76,12 @@
                                         parameters.path(hover)
                                         parameters.context.stroke()
                                     }
-                                    if (selected) {
+                                    /*if (selected) {
                                         parameters.context.beginPath()
                                         parameters.context.lineWidth = 1 / parameters.scale
                                         parameters.path(selected)
                                         parameters.context.stroke()
-                                    }
+                                    }*/
                                 }
                             },
                             events: {
