--- a/test/elecciones.html
+++ b/test/elecciones.html
@@ -7,7 +7,7 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="../lib/d3.min.js"></script>
+        <script src="../lib/d3.v4.min.js"></script>
         <script src="../lib/topojson.min.js"></script>
         <script src="rbush.js"></script>
         <script src="../spam.js"></script>
