--- a/test/index.html
+++ b/test/index.html
@@ -7,10 +7,10 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="../lib/d3.min.js"></script>
+        <script src="../lib/d3.v4.min.js"></script>
         <script src="../lib/topojson.min.js"></script>
         <script src="rbush.js"></script>
-        <script src="../spam.min.js"></script>
+        <script src="../spam.js"></script>
         <script type='text/javascript'>
         /*
         {
