--- a/test/elecciones.html
+++ b/test/elecciones.html
@@ -7,9 +7,9 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="../lib/d3.v4.min.js"></script>
-        <script src="../lib/topojson.min.js"></script>
-        <script src="rbush.js"></script>
+        <script src="../node_modules/d3/build/d3.js"></script>
+        <script src="../node_modules/topojson/build/topojson.min.js"></script>
+        <script src="../node_modules/rbush/rbush.js"></script>
         <script src="../spam.js"></script>
         <script type='text/javascript'>
             // Ideas: list of polygons/features, have some prepaintCallback(context)? To set color and all?
@@ -48,6 +48,7 @@
                     topojson.presimplify(d)
                     topojson.presimplify(roads)
                     var end = performance.now()
+                    console.log(d);
                     console.log("Presimplify takes " + (end - start))
 
                     var creatingStart = performance.now()
@@ -76,12 +77,12 @@
                                         parameters.path(hover)
                                         parameters.context.stroke()
                                     }
-                                    if (selected) {
+                                    /*if (selected) {
                                         parameters.context.beginPath()
                                         parameters.context.lineWidth = 1 / parameters.scale
                                         parameters.path(selected)
                                         parameters.context.stroke()
-                                    }
+                                    }*/
                                 }
                             },
                             events: {
