--- a/test/elecciones.html
+++ b/test/elecciones.html
@@ -7,7 +7,7 @@
     <body>
         <div class="js-map"></div>
 
-        <script src="../node_modules/d3/d3.min.js"></script>
+        <script src="../node_modules/d3/build/d3.min.js"></script>
         <script src="../node_modules/topojson/build/topojson.min.js"></script>
         <script src="../node_modules/rbush/rbush.js"></script>
         <script src="../spam.js"></script>
