--- a/test/index.html
+++ b/test/index.html
@@ -1,86 +1,65 @@
 <!doctype html>
 <html lang="es-ES">
-    <head>
-        <style>
-            /*.js-map {
-                width: 400px;
-            }*/
-        </style>
-    </head>
-    <body>
-        <div class="js-map"></div>
 
-        <script src="../node_modules/d3/build/d3.min.js"></script>
-        <script src="../node_modules/topojson/build/topojson.min.js"></script>
-        <script src="../node_modules/rbush/rbush.js"></script>
-        <script src="../spam.js"></script>
-        <script type='text/javascript'>
-        /*
-        {
-            features: (make it optional!),
+<body>
+  <div class="js-map"></div>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/topojson.v3.min.js"></script>
+  <script src="https://unpkg.com/rbush@3.0.1/rbush.min.js"></script>
+  <script src="../dist/spam.js"></script>
+
+  <script type='text/javascript'>
+    d3.json("municipalities.json", function (error, d) {
+      d3.json("roads.json", function (error, roads) {
+        topojson.presimplify(d)
+        topojson.presimplify(roads)
+        console.log(d)
+        console.log(d3.select(".js-map").node().getBoundingClientRect().width)
+
+
+        var hover = null
+        var map = spam.ZoomableCanvasMap({
+          element: ".js-map",
+          projection: null, // TODO how to automagically detect this?
+          data: [{
+            features: topojson.feature(d, d.objects["municipalities"]),
             static: {
-                prepaint:,
-                paintfeature:,
-                postpaint:
+              prepaint: function (parameters) {
+                console.log("PRE")
+              },
+              paintfeature: function (parameters, d) {
+                //console.log(d)
+                /*if (d.properties.name[0] < "H")
+                    parameters.context.fillStyle = "blue"
+                else*/
+                parameters.context.fillStyle = "red"
+                parameters.context.fill()
+              }
             },
             dynamic: {
-                prepaint:,
-                postpaint:
+              postpaint: function (parameters) {
+                if (!hover)
+                  return
+                parameters.context.beginPath()
+                parameters.context.lineWidth = 1 / parameters.scale / parameters.projectedScale
+                parameters.path(hover)
+                parameters.context.stroke()
+              }
             },
-            click:
-        }
-        */
-            // TODO queue.js
-            d3.json("municipalities.json", function(error, d) {
-                d3.json("roads.json", function(error, roads) {
-                    topojson.presimplify(d)
-                    topojson.presimplify(roads)
-                    console.log(d)
-                    console.log(d3.select(".js-map").node().getBoundingClientRect().width)
-
-                    var hover = null
-                    var map = new ZoomableCanvasMap({
-                        element: ".js-map",
-                        projection: null, // TODO how to automagically detect this?
-                        data: [{
-                            features: topojson.feature(d, d.objects["municipalities"]),
-                            static: {
-                                prepaint: function(parameters) {
-                                    console.log("PRE")
-                                },
-                                paintfeature: function(parameters, d) {
-                                    //console.log(d)
-                                    /*if (d.properties.name[0] < "H")
-                                        parameters.context.fillStyle = "blue"
-                                    else*/
-                                        parameters.context.fillStyle = "red"
-                                    parameters.context.fill()
-                                }
-                            },
-                            dynamic: {
-                                postpaint: function(parameters) {
-                                    if (!hover)
-                                        return
-                                    parameters.context.beginPath()
-                                    parameters.context.lineWidth = 1 / parameters.scale / parameters.projectedScale
-                                    parameters.path(hover)
-                                    parameters.context.stroke()
-                                }
-                            },
-                            events: {
-                                click: function(parameters, d) { // TODO replace map with parameters?
-                                    console.log("CLICK")
-                                    console.log(parameters)
-                                    parameters.map.zoom(d)
-                                },
-                                hover: function(parameters, d) {
-                                    //if (d)
-                                    //    console.log("HOVER " + d.properties.name)
-                                    hover = d
-                                    parameters.map.paint()
-                                }
-                            }
-                        }/*,
+            events: {
+              click: function (parameters, d) { // TODO replace map with parameters?
+                console.log("CLICK")
+                console.log(parameters)
+                parameters.map.zoom(d)
+              },
+              hover: function (parameters, d) {
+                //if (d)
+                //    console.log("HOVER " + d.properties.name)
+                hover = d
+                parameters.map.paint()
+              }
+            }
+          }/*,
                         {
                             features: topojson.feature(roads, roads.objects["roads"]),
                             static: {
@@ -91,12 +70,13 @@
                                 }
                             }
                         }*/]
-                    })
+        })
 
-                    map.init()
-                    //console.log(map)
-                })
-            })
-        </script>
-    </body>
+        map.init()
+        console.log(map)
+      })
+    })
+  </script>
+</body>
+
 </html>
