--- a/test/index.html
+++ b/test/index.html
@@ -50,7 +50,7 @@
               click: function (parameters, d) { // TODO replace map with parameters?
                 console.log("CLICK")
                 console.log(parameters)
-                parameters.map.zoom(d)
+                parameters.map.zoom(d, parameters.context)
               },
               hover: function (parameters, d) {
                 //if (d)
