--- a/test/static.html
+++ b/test/static.html
@@ -8,22 +8,23 @@
 
 <body>
   <div class="js-map"></div>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://d3js.org/topojson.v3.min.js"></script>
-  <script src="https://unpkg.com/rbush@3.0.1/rbush.min.js"></script>
+  <script src="d3.v5.min.js"></script>
+  <script src="topojson.v3.min.js"></script>
   <script src="../dist/spam.js"></script>
 
   <script type='text/javascript'>
-    d3.json("municipalities.json", function (error, d) {
-      d3.json("roads.json", function (error, roads) {
+    Promise.all([
+      d3.json('municipalities.json'),
+      d3.json('roads.json'),
+    ])
+      .catch(err => console.warn(err))
+      .then(([d, roads]) => {
         topojson.presimplify(d)
         topojson.presimplify(roads)
-        console.log(d)
         console.log(d3.select(".js-map").node().getBoundingClientRect().width)
 
-
         var hover = null
-        var map = spam.StaticCanvasMap({
+        var map = new Spam.StaticCanvasMap({
           element: ".js-map",
           projection: null, // TODO how to automagically detect this?
           data: [{
@@ -45,9 +46,7 @@
         })
 
         map.init()
-        console.log(map)
       })
-    })
   </script>
 </body>
 
